--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,19 @@
 .App{
   text-align: center;
 }
+.footer{
+  background-color: #D1c4e9;
+  margin:0px auto;
+  padding-top: fixed;
+  position:fixed;
+  bottom:0;
+  width:100%;
+
+}
+
+
+.row-content {
+  margin:0px auto;
+  padding: 50px 0px 50px 0px;
+  min-height: 400px;
+}
